# Parallels

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
ant/: CMakeLists.txt  program.cc  program.h
ant/lib/: ant.cc  ant.h
common/: CMakeLists.txt  barrier.cc  barrier.h  console.cc  console.h  matrix.cc  matrix.h  thread_pool.cc  thread_pool.h  timer.h
gauss/: CMakeLists.txt  program.cc  program.h
gauss/lib/: gauss.cc  gauss.h
winograd/: CMakeLists.txt  program.cc  program.h
winograd/lib/: winograd.cc  winograd.h
